...
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>

    <!-- TrackingsAdapter -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
...
    <string name="openDrawer">open Drawer</string>
    <string name="closeDrawer">close Drawer</string>
    <string name="invalid_password_mail">Invalid email or password</string>
    <string name="add_bluetooth_device">Add bluetooth device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="bluetooth_required_message">Bluetooth is required. Would you like to enable?</string>
    <string name="enable">Enable</string>
    <string name="keep_off">Keep off</string>
    <string name="error">Error</string>
    <string name="error_enable_bluetooth">Enabling Bluetooth failed</string>
    <string name="ok">OK</string>
    <string name="search_devices">Search devices</string>
    <string name="add_device">Add device and pair</string>
    <string name="enter_device_name">Enter device name</string>
    <string name="employees">Employees:</string>
    <string name="export_timesheet">Export Timesheet</string>
    <string name="error_export">No trackings to export!</string>
    <string name="end_date_before_start_date">The starting time is after the end time!</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="pw_matching">The password confirmation does not match</string>

</resources>
