<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flBluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="171dp">

        <Button
            android:id="@+id/btnDiscoverBluetoothDevices"
            android:text="@string/search_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#168AAD"
            android:fontFamily="sans-serif-light"
            android:textColor="#FFFFFF"/>

        <ListView
            android:id="@+id/lvBluetoothDevices"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>



</FrameLayout>