<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/llBluetoothDevices">

    <Button
        android:id="@+id/btnAddBluetoothDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#168AAD"
        android:fontFamily="sans-serif-light"
        android:text="@string/add_bluetooth_device"
        android:textColor="#FFFFFF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBluetoothDevicesList"
        android:name="team16.easytracker.BluetoothDevicesFragment"
        tools:context=".BluetoothDevicesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_bluetooth_device_item" />

</LinearLayout>